--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "client": {
-        "token": "MTExMTY1NjgzMDM4MTM0Mjc0NA.GH1q88.RS8zQtVx34QOixuh4sf-QsBMrBTRUABMBOFHe8",
+        "token": "",
         "uri": ""
     }
 }
